# mkdocs-landing

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: docs.yml  pypi.yaml  tests.yaml
docs/: 404.html  index.html
docs/assets/branding/: Landing.afpalette
docs/branding/: logos.afdesign
docs/configuration/: index.html
docs/css/: style.css
docs/gallery/: index.html
docs/gallery/catppuccin/: index.html
docs/gallery/catppuccin/css/: links.css  style.css
docs/gallery/catppuccin/presets/: catppuccin.yml
docs/gallery/catppuccin/search/: search_index.json
docs/gallery/torillic/: index.html
docs/gallery/torillic/css/: links.css  responsivity.css
docs/gallery/torillic/search/: search_index.json
docs/links/: index.html
docs/presets/: index.html  save-the-date.yml
docs/search/: search_index.json
docs_src/: configuration.md  index.md  links.md  presets.md
gallery/catppuccin/: mkdocs.yaml
gallery/catppuccin/src/: index.md
gallery/save-the-date/: mkdocs.yaml
gallery/save-the-date/src/: index.md
gallery/torillic/: mkdocs.yaml
gallery/torillic/src/: index.md
mkdocs-landing/theme/: article.html
mkdocs_landing/: article.html  filters.py  links.html  main.html  mkdocs_theme.yml
mkdocs_landing/assets/: assets.afdesign
mkdocs_landing/css/: image_gallery.css  links.css  responsivity.css  style.css
mkdocs_landing/filters/: __init__.py  base.py  md.py
mkdocs_landing/hooks/: hexcodes.py  layout.py  md_filter.py
mkdocs_landing/partials/: article_header.html  footer.html  head_config.html  header_element.html  homepage_header.html  share_btn.html  toc.html
mkdocs_landing/presets/: __init__.py  base.py  catppuccin.py  plugin.py  save_the_date.py
mkdocs_landing/scripts/: image_gallery.js
tests/: test_sites.py  util.py
tests/test_sites/mkdocs_gallery/: mkdocs.yaml
tests/test_sites/zeroconf/: mkdocs.yaml
(+3 files in other folders)
